# pascal-ndvi-block

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _config.yml  codecov.yml  manifest.json  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_checks.ps1  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  publish.yml  test.yml  validate-manifest.yml
docs/: README.md  _config.yml  index.md  risk_assessment.md
docs/compliance/: iso42001_compliance.md  normative_dependencies.md  privacy_policy.md
docs/examples/: advanced_examples.md  basic_usage.md
docs/maintenance/: maintenance_guide.md
docs/technical/: api_documentation.md  architecture_overview.md  deployment_guide.md  functions_reference.md  technical_documentation.md
docs/user_guide/: faq.md  installation.md  quick_start.md  troubleshooting.md  user_guide.md
schemas/: README.md  manifest.schema.json
src/: __init__.py  config.py  indices.py  logging_config.py  main.py  preprocessor.py
tests/: conftest.py  test_main.py
tests/integration/: test_workflow.py
tests/unit/: test_core.py
