[project]
name = "pascal-ndvi-block"
version = "1.0.1"
description = "High-performance NDVI/SAVI/NDRE with ISO 42001 compliance"
readme = "README.md"
authors = [
  { name = "AustralMetrics SpA", email = "info@australmetrics.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "typer",
  "rasterio",
  "geopandas",
  "shapely",
  "loguru",
  "numpy"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov",
  "coverage",
  "flake8",
  "black",
  "mypy",
  "types-geopandas",
  "pydocstyle",
  "bandit",
  "safety",
  "build",
  "twine",
  "setuptools>=45",
  "wheel",
  "types-setuptools",
  "types-python-dateutil"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
