[project]
name = "pascal-ndvi-block"
version = "1.0.1"
description = "High-performance NDVI/SAVI/NDRE with ISO 42001 compliance"
readme = "README.md"
authors = [
  { name = "AustralMetrics SpA", email = "info@australmetrics.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "typer",
  "rasterio",
  "geopandas",
  "shapely",
  "loguru",
  "numpy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

